9.1.0
-----
* Fixed CSS GUI layout
* Improved Qt GUI responsiveness during startup

9.0.0
-----
* Massive application engine overhaul
* Added phonetic display mode to board generator
* Factored search and display data containers to generate fewer HTTP requests
* Combined rules into one file, removed rules with bad accuracy
* Deprecated less useful config options, added others to main GUI

8.0.0
-----
* Restructured rules format
* Improved lexer and graph performance

7.0.1
-----
* Improved board generator code
* Updated documentation

7.0.0
-----
* Refactored the framework...again
* Further improved HTML display
* Added monospace compatibility mode to graph

6.1.1
-----
* Improved HTML display
* Fixed several bugs involving logging

6.1.0
-----
* Added logging facilities
* Improved HTTP support and performance
* Improved general code quality

6.0.0
-----
* Total refactoring of the framework with new HTTP support
* SVG board diagrams are now compatible with major web browsers
* Added linked strokes and simple briefs to the board diagram
* Added rule selection in text graph by mouse click
* Added manual translation entry in the graph title bar
* Object tree and console can now auto-import missing modules
* Object tree can now inspect the last exception traceback

5.0.0
-----
* Near complete refactoring of the framework
* Engine commands are now available directly in the console as functions
* Added miscellaneous features to the object tree dialog
* Added more rules to the board diagram

4.1.0
-----
* Added steno order inversions to the board diagram
* Exceptions no longer crash the program if stderr is unavailable
* Improved SVG rendering code
* Improved object tree dialog appearance and capabilities

4.0.0
-----
* Added user-configurable file for other steno systems/languages
* Added Python object tree dialog for debugging
* Improved lexer performance moderately

3.1.0
-----
* Dramatically improved index load time and memory usage at a slight cost on lookups