@@ -1,8 +1,7 @@
 {
   # Coordinates of the bounding box for a single steno board diagram.
-  "bounds": {
-    "min": [-5, -25],
-    "max": [306, 116]},
+  "min_bounds": [-5, -25],
+  "max_bounds": [306, 116],
 
   # Coordinates for the upper-left corner of every basic steno key. Also includes offsets for the bottom half of every tall key.
   "pos": {
@@ -13,32 +12,34 @@
 
   # Data for SVG paths composing key shapes and the areas that text may occupy on them.
   "shape": {
-    "number": {"txtcenter": [148, 9],   "txtarea": [290, 12], "altangle": 0,  "d": "M0,0h296v16h-296v-16z"},
-    "square": {"txtcenter": [13,  14],  "txtarea": [20, 20],  "altangle": 0,  "d": "M0,0h26v26h-26v-26z"},
-    "round":  {"txtcenter": [13,  13],  "txtarea": [20, 20],  "altangle": 0,  "d": "M0,0h26v13a13,13,0,0,1,-26,0v-13z"},
-    "tall":   {"txtcenter": [13,  28],  "txtarea": [20, 45],  "altangle": 90, "d": "M0,0h26v43a13,13,0,0,1,-26,0v-43z"},
-    "rect":   {"txtcenter": [28,  14],  "txtarea": [50, 20],  "altangle": 0,  "d": "M0,0h56v26h-56v-26z"},
-    "wide":   {"txtcenter": [28,  13],  "txtarea": [50, 20],  "altangle": 0,  "d": "M0,0h56v13a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13v-13z"},
-    "3rect":  {"txtcenter": [43,  14],  "txtarea": [80, 20],  "altangle": 0,  "d": "M0,0h86v26h-86v-26z"},
-    "3wide":  {"txtcenter": [43,  13],  "txtarea": [80, 20],  "altangle": 0,  "d": "M0,0h86v13a13,13,0,0,1,-13,13h-60a13,13,0,0,1,-13,-13v-13z"},
-    "L":      {"txtcenter": [28,  43],  "txtarea": [50, 20],  "altangle": 0,  "d": "M0,0h26v30h30v13a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13v-43z"},
-    "4rect":  {"txtcenter": [58,  14],  "txtarea": [110, 20], "altangle": 0,  "d": "M0,0h116v26h-116v-26z"},
-    "4wide":  {"txtcenter": [58,  13],  "txtarea": [110, 20], "altangle": 0,  "d": "M0,0h116v13a13,13,0,0,1,-13,13h-90a13,13,0,0,1,-13,-13v-13z"},
-    "2x2":    {"txtcenter": [28,  28],  "txtarea": [50, 45],  "altangle": 0,  "d": "M0,0h56v43a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13v-43z"},
-    "3x2":    {"txtcenter": [43,  28],  "txtarea": [80, 45],  "altangle": 0,  "d": "M0,0h86v43a13,13,0,0,1,-13,13h-60a13,13,0,0,1,-13,-13v-43z"},
-    "r__r":   {"txtcenter": [13,  13],  "txtarea": [20, 20],  "altangle": 0,  "d": "M0,0h116v13a13,13,0,0,1,-26,0h-64a13,13,0,0,1,-26,0v-13z"},
-    "r_r":    {"txtcenter": [13,  13],  "txtarea": [20, 20],  "altangle": 0,  "d": "M0,0h86v13a13,13,0,0,1,-26,0h-34a13,13,0,0,1,-26,0v-13z"},
-    "vA":     {"txtcenter": [13,  13],  "txtarea": [20, 20],  "altangle": 0,  "d": "M0,0h126v13a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13h-44a13,13,0,0,1,-26,0v-13zM26,6h95z"},
-    "vO":     {"txtcenter": [13,  13],  "txtarea": [20, 20],  "altangle": 0,  "d": "M0,0h66v13a13,13,0,0,1,-26,0h-14a13,13,0,0,1,-26,0v-13zM26,6h35z"},
-    "vE":     {"txtcenter": [83,  13],  "txtarea": [20, 20],  "altangle": 0,  "d": "M0,0h96v13a13,13,0,0,1,-26,0h-14a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13v-13zM5,6h65z"},
-    "vU":     {"txtcenter": [113, 13],  "txtarea": [20, 20],  "altangle": 0,  "d": "M0,0h126v13a13,13,0,0,1,-26,0h-44a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13v-13zM5,6h95z"},
-    "vI":     {"txtcenter": [98,  13],  "txtarea": [50, 20],  "altangle": 0,  "d": "M0,0h126v13a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13h-14a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13v-13zM5,6h80zM111,6h10z"},
-    "vOI":    {"txtcenter": [68,  13],  "txtarea": [50, 20],  "altangle": 0,  "d": "M0,0h96v13a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13h-14a13,13,0,0,1,-26,0v-13z"},
-    "v__v":   {"txtcenter": [13,  13],  "txtarea": [20, 20],  "altangle": 0,  "d": "M0,0h126v13a13,13,0,0,1,-26,0h-74a13,13,0,0,1,-26,0v-13z"},
-    "v_v":    {"txtcenter": [13,  13],  "txtarea": [20, 20],  "altangle": 0,  "d": "M0,0h96v13a13,13,0,0,1,-26,0h-44a13,13,0,0,1,-26,0v-13z"},
-    "diag":   {"txtcenter": [28,  27],  "txtarea": [12, 40],  "altangle": 45, "d": "M0,30h13l17,-17v-13h26v26h-13l-17,17a13,13,0,0,1,-13,13a13,13,0,0,1,-13,-13v-13z"},
-    "and":    {"txtcenter": [28,  13],  "txtarea": [50, 20],  "altangle": 0,  "d": "M0,0h43l17,-17v-13h26v26h-13l-17,17a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13v-13z"},
-    "v_*_v":  {"txtcenter": [13,  28],  "txtarea": [20, 45],  "altangle": 90, "d": "M0,0h26v60h50v13a13,13,0,0,1,-26,0h-74a13,13,0,0,1,-26,0v-13h50v-60z"}},
+    "number": {"txtcenter": [148, 9],   "txtarea": [290, 12], "altangle": 0,   "d": "M0,0h296v16h-296v-16z"},
+    "square": {"txtcenter": [13,  14],  "txtarea": [20, 20],  "altangle": 0,   "d": "M0,0h26v26h-26v-26z"},
+    "round":  {"txtcenter": [13,  13],  "txtarea": [20, 20],  "altangle": 0,   "d": "M0,0h26v13a13,13,0,0,1,-26,0v-13z"},
+    "tall":   {"txtcenter": [13,  28],  "txtarea": [20, 45],  "altangle": -90, "d": "M0,0h26v43a13,13,0,0,1,-26,0v-43z"},
+    "rect":   {"txtcenter": [28,  14],  "txtarea": [50, 20],  "altangle": 0,   "d": "M0,0h56v26h-56v-26z"},
+    "wide":   {"txtcenter": [28,  13],  "txtarea": [50, 20],  "altangle": 0,   "d": "M0,0h56v13a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13v-13z"},
+    "3rect":  {"txtcenter": [43,  14],  "txtarea": [80, 20],  "altangle": 0,   "d": "M0,0h86v26h-86v-26z"},
+    "3wide":  {"txtcenter": [43,  13],  "txtarea": [80, 20],  "altangle": 0,   "d": "M0,0h86v13a13,13,0,0,1,-13,13h-60a13,13,0,0,1,-13,-13v-13z"},
+    "L":      {"txtcenter": [28,  43],  "txtarea": [50, 20],  "altangle": 0,   "d": "M0,0h26v30h30v13a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13v-43z"},
+    "4rect":  {"txtcenter": [58,  14],  "txtarea": [110, 20], "altangle": 0,   "d": "M0,0h116v26h-116v-26z"},
+    "4wide":  {"txtcenter": [58,  13],  "txtarea": [110, 20], "altangle": 0,   "d": "M0,0h116v13a13,13,0,0,1,-13,13h-90a13,13,0,0,1,-13,-13v-13z"},
+    "2x2":    {"txtcenter": [28,  28],  "txtarea": [50, 45],  "altangle": 0,   "d": "M0,0h56v43a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13v-43z"},
+    "3x2":    {"txtcenter": [43,  28],  "txtarea": [80, 45],  "altangle": 0,   "d": "M0,0h86v43a13,13,0,0,1,-13,13h-60a13,13,0,0,1,-13,-13v-43z"},
+    "r__r":   {"txtcenter": [13,  13],  "txtarea": [20, 20],  "altangle": 0,   "d": "M0,0h116v13a13,13,0,0,1,-26,0h-64a13,13,0,0,1,-26,0v-13z"},
+    "r_r":    {"txtcenter": [13,  13],  "txtarea": [20, 20],  "altangle": 0,   "d": "M0,0h86v13a13,13,0,0,1,-26,0h-34a13,13,0,0,1,-26,0v-13z"},
+    "vA":     {"txtcenter": [13,  13],  "txtarea": [20, 20],  "altangle": 0,   "d": "M0,0h126v13a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13h-44a13,13,0,0,1,-26,0v-13zM26,6h95z"},
+    "vO":     {"txtcenter": [13,  13],  "txtarea": [20, 20],  "altangle": 0,   "d": "M0,0h66v13a13,13,0,0,1,-26,0h-14a13,13,0,0,1,-26,0v-13zM26,6h35z"},
+    "vE":     {"txtcenter": [83,  13],  "txtarea": [20, 20],  "altangle": 0,   "d": "M0,0h96v13a13,13,0,0,1,-26,0h-14a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13v-13zM5,6h65z"},
+    "vU":     {"txtcenter": [113, 13],  "txtarea": [20, 20],  "altangle": 0,   "d": "M0,0h126v13a13,13,0,0,1,-26,0h-44a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13v-13zM5,6h95z"},
+    "vI":     {"txtcenter": [98,  13],  "txtarea": [50, 20],  "altangle": 0,   "d": "M0,0h126v13a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13h-14a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13v-13zM5,6h80zM111,6h10z"},
+    "vOI":    {"txtcenter": [68,  13],  "txtarea": [50, 20],  "altangle": 0,   "d": "M0,0h96v13a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13h-14a13,13,0,0,1,-26,0v-13z"},
+    "v__v":   {"txtcenter": [13,  13],  "txtarea": [20, 20],  "altangle": 0,   "d": "M0,0h126v13a13,13,0,0,1,-26,0h-74a13,13,0,0,1,-26,0v-13z"},
+    "v_v":    {"txtcenter": [13,  13],  "txtarea": [20, 20],  "altangle": 0,   "d": "M0,0h96v13a13,13,0,0,1,-26,0h-44a13,13,0,0,1,-26,0v-13z"},
+    "diag+":  {"txtcenter": [28,  27],  "txtarea": [12, 40],  "altangle": 45,  "d": "M0,30h13l17,-17v-13h26v26h-13l-17,17a13,13,0,0,1,-26,0v-13z"},
+    "diag-":  {"txtcenter": [28,  27],  "txtarea": [12, 40],  "altangle": -45, "d": "M0,0v26h13l17,17a-13,13,0,0,0,26,0v-13h-13l-17,-17v-13h-26z"},
+    "H":      {"txtcenter": [43,  28],  "txtarea": [80, 20],  "altangle": 0,   "d": "M0,0h26v15h34v-15 h26v43a13,13,0,0,1,-26,0v-2h-34v2a13,13,0,0,1,-26,0v-43z"},
+    "and":    {"txtcenter": [28,  13],  "txtarea": [50, 20],  "altangle": 0,   "d": "M0,0h43l17,-17v-13h26v26h-13l-17,17a13,13,0,0,1,-13,13h-30a13,13,0,0,1,-13,-13v-13z"},
+    "v_*_v":  {"txtcenter": [13,  28],  "txtarea": [20, 45],  "altangle": 90,  "d": "M0,0h26v60h50v13a13,13,0,0,1,-26,0h-74a13,13,0,0,1,-26,0v-13h50v-60z"}},
 
   # Text glyph shapes for English characters and a few other Unicode symbols.
   "glyph": {
@@ -138,8 +139,8 @@
     "=": "M85,406l0,62l430,0l0,-62M85,193l0,62l430,0l0,-62z",
     "^": "M111,284l153,386l72,0l153,-386l-72,0l-66,176l-49,133l-4,0l-49,-133l-66,-176z",
     "~": "M388,257C368,257 350,261 335,270C319,279 304,288 291,299C277,310 264,319 251,328C238,337 224,341 210,341C195,341 180,335 167,324C153,313 140,290 129,255l-53,23C93,325 114,357 138,376C162,394 187,403 212,403C232,403 250,399 266,390C281,381 296,372 310,361C323,350 337,341 350,332C363,323 376,319 390,319C398,319 406,320 413,323C420,325 427,329 434,336C441,342 447,351 453,362C459,373 465,388 471,405l53,-24C507,334 486,302 462,284C438,266 413,257 388,257z",
-    "↑": "M246,676C190,623 146,580 86,520C47,481 96,430 140,470C174,500 231,556 263,588C263,403 264,159 264,-26 C264,-83 339,-83 339,-26 C339,179 341,400 339,588C382,546 433,496 461,470C500,432 556,485 521,520C467,573 403,628 355,676C311,720 295,722 246,676Z",
-    "⇄": "M-389,-89C -389,-89 -390,-89 -390,-89L-545,74C-555,84 -555,100 -545,110L-390,273C-366,297 -330,261 -352,237L-467,118H1186C1217,118 1217,66 1186,66H-467L-352,-53C-329,-77 -366,-111 -389,-89ZM1012,354L1126,474H-527C-560,474 -560,525 -527,525H-527H1127L1012,645C987,671 1028,703 1049,681 C 1102,625 1153,572 1205,517C1213,509 1213,490.4 1205,482L1049,319C1024,293 991,332 1012,354Z"},
+    "↑": "M246,676C190,623 146,580 86,520C47,481 96,430 140,470C174,500 231,556 263,588C263,403 264,159 264,-26C264,-83 339,-83 339,-26C339,179 341,400 339,588C382,546 433,496 461,470C500,432 556,485 521,520C467,573 403,628 355,676C311,720 295,722 246,676z",
+    "⇄": "M-389,-89C-389,-89 -390,-89 -390,-89L-545,74C-555,84 -555,100 -545,110L-390,273C-366,297 -330,261 -352,237L-467,118H1186C1217,118 1217,66 1186,66H-467L-352,-53C-329,-77 -366,-111 -389,-89ZM1012,354L1126,474H-527C-560,474 -560,525 -527,525H-527H1127L1012,645C987,671 1028,703 1049,681 C 1102,625 1153,572 1205,517C1213,509 1213,490 1205,482L1049,319C1024,293 991,332 1012,354z"},
 
   # Standard keys in basic positions with text.
   "key": {
@@ -215,6 +216,7 @@
     "ts":     ["pos=t", "shape=tall"],
     "dz":     ["pos=d", "shape=tall"],
     "TPH":    ["pos=T", "shape=3rect"],
+    "plt":    ["pos=p", "shape=3rect"],
     "KWR":    ["pos=K", "shape=3wide"],
     "bgs":    ["pos=b", "shape=3wide"],
     "frb":    ["pos=f", "shape=L"],
@@ -240,9 +242,11 @@
     "OU":     ["pos=O", "shape=v_v"],
     "SR":    ["pos=S2", "shape=r__r"],
     "KR":     ["pos=K", "shape=r_r"],
-    "KP":     ["pos=T", "shape=diag"],
-    "bl":     ["pos=p", "shape=diag"],
-    "gt":     ["pos=l", "shape=diag"],
+    "KP":     ["pos=T", "shape=diag+"],
+    "bl":     ["pos=p", "shape=diag+"],
+    "gt":     ["pos=l", "shape=diag+"],
+    "ls":     ["pos=l", "shape=diag-"],
+    "SPW":    ["pos=S", "shape=H"],
     "SKP":   ["pos=S2", "shape=and"],
     "A*U":    ["pos=*", "shape=v_*_v"]}
 }
