@@ -295,9 +295,6 @@
   "ou":   ["OU",   "ou",    [],       "`ou` as in `ouch`"],
   "ow":   ["OU",   "ow",    [],       "`ow` as in `down`"],
 
-  #"oi":   ["OEU",  "oi|OI", [],       "`oi` as in `oink`"],
-  #"oy":   ["OEU",  "oy|OI", [],       "`oy` as in `oyster`"],
-
   # Orthographic rules - vowels
   "oa":   ["AO",   "oa",    [],       "spelling of `oa` is AO for vowel sound conflicts"],
   "oo":   ["AO",   "oo",    [],       "spelling of `oo` is always AO"],
@@ -307,76 +304,77 @@
   "o*+":  ["AU",   "o",     [],       "`o` may be AU when used in certain prefixes"],
 
   # Left side H compounds
-  "cK~":   ["K",    "c|C",       ["SPEC"], "used as soft `c` in CH sound."],
-  "ch.":   ["KH",   "(cK~)(h.)",       [], "left side CH"],
-  "c.+":   ["KH",   "c|CH",      ["RARE"], "phonetic CH"],
-  "t.+":   ["KH",   "t|CH",      ["RARE"], "phonetic CH"],
-  "sh.":   ["SH",   "(s.)(h.)",        [], "left side SH"],
-  "sch.":  ["SH",   "(s.)c(h.)",       [], "merged consonant sounds"],
-  "ce.":   ["SH",   "ce|SH",     ["RARE"], "phonetic SH"],
-  "ci.":   ["SH",   "ci|SH",     ["RARE"], "phonetic SH"],
-  "si.":   ["SH",   "si|SH",     ["RARE"], "phonetic SH"],
-  "ti.":   ["SH",   "ti|SH",     ["RARE"], "phonetic SH"],
-  "th.":   ["TH",   "(t.)(h.)",        [], "left side TH"],
+  "cK~":   ["K",    "c|C",        ["SPEC"], "used as C in CH sound."],
+  "ch.":   ["KH",   "(cK~)(h.)",        [], "left side CH"],
+  "H~":    ["H",    "-|H",        ["SPEC"], "sound with no written letter"],
+  "c.+":   ["KH",   "(cK~)(|H~)", ["RARE"], "phonetic CH"],
+  "tK~":   ["K",    "t|C",        ["SPEC"], "used as C in CH sound."],
+  "t.+":   ["KH",   "(tK~)(|H~)", ["RARE"], "phonetic CH"],
+  "sh.":   ["SH",   "(s.)(h.)",         [], "left side SH"],
+  "c.!":   ["SH",   "(c!)(|H~)",  ["RARE"], "phonetic SH"],
+  "s.+":   ["SH",   "(s.)(|H~)",  ["RARE"], "phonetic SH"],
+  "ti~":   ["S",    "ti",         ["SPEC"], "left side S in SH sound."],
+  "ti.":   ["SH",   "(ti~)(|H~)", ["RARE"], "phonetic SH"],
+  "th.":   ["TH",   "(t.)(h.)",         [], "left side TH"],
 
   # Folds and inversions
-  "dis.":  ["STK",  "(d.)i(s.)",  ["INV"], "s/d inversion"],
-  "des.":  ["STK",  "(d.)e(s.)",  ["INV"], "s/d inversion"],
-  "dec.":  ["STK",  "(d.)e(c!)",  ["INV"], "c/d inversion"],
-  "ins.":  ["STPH", "(in.)(s.)",  ["INV"], "s/n inversion (STPHERT → insert)"],
-  "inc.":  ["STPH", "(in.)(c!)",  ["INV"], "c/n inversion"],
-  "bes.":  ["SPW",  "(b.)e(s.)",  ["INV"], "s/b inversion"],
-  "mis.":  ["SPH",  "(m.)i(s.)",  ["INV"], "s/m inversion"],
-  "io":    ["OEU",  "(i)(o)",     ["INV"], "i/o inversion"],
-  ".rf":   ["-FR",  "(.r)(.f)",   ["INV"], "f/r inversion"],
-  ".rph":  ["-FR",  "(.r)(.ph)",  ["INV"], "f/r inversion"],
-  ".nf":   ["-FPB", "(.n)(.f)",   ["INV"], "f/n inversion"],
-  ".nv":   ["-FPB", "(.n)(.v)",   ["INV"], "f/n inversion"],
-  ".mph":  ["-FPL", "(.m)(.ph)",  ["INV"], "f/m inversion"],
-  ".lf":   ["-FL",  "(.l)(.f)",   ["INV"], "f/l inversion"],
-  ".lph":  ["-FL",  "(.l)(.ph)",  ["INV"], "f/l inversion"],
-  ".lv":   ["-FL",  "(.l)(.v)",   ["INV"], "f/l inversion"],
-  ".tl":   ["-LT",  "(.t)(.l)",   ["INV"], "l/t inversion"],
-  ".tal":  ["-LT",  "(.t)a(.l)",  ["INV"], "l/t inversion"],
-  ".tel":  ["-LT",  "(.t)e(.l)",  ["INV"], "l/t inversion"],
-  ".pr":   ["-RP",  "(.p)(.r)",   ["INV"], "r/p inversion"],
-  ".br":   ["-RB",  "(.b)(.r)",   ["INV"], "r/b inversion"],
-  ".cr":   ["-RBG", "(.c)(.r)",   ["INV"], "r/c inversion"],
-  ".kr":   ["-RBG", "(.k)(.r)",   ["INV"], "r/k inversion"],
-  ".xtr":  ["-RBGS","(.x)t(.r)",  ["INV"], "r/x inversion"],
-  ".gr":   ["-RG",  "(.g)(.r)",   ["INV"], "r/g inversion"],
-  ".tr":   ["-RT",  "(.t)(.r)",   ["INV"], "r/t inversion"],
-  ".dr":   ["-RD",  "(.d)(.r)",   ["INV"], "r/d inversion"],
-  ".gly":  ["-LG",  "(.g)(.ly)",  ["INV"], "-ly suffix fold"],
-  ".tly":  ["-LT",  "(.t)(.ly)",  ["INV"], "-ly suffix fold"],
-  ".tely": ["-LT",  "(.t)e(.ly)", ["INV"], "-ly suffix fold"],
-  ".sly":  ["-LS",  "(.s)(.ly)",  ["INV"], "-ly suffix fold"],
-  ".sely": ["-LS",  "(.s)e(.ly)", ["INV"], "-ly suffix fold"],
-  ".cely": ["-LS",  "(!c)e(.ly)", ["INV"], "-ly suffix fold"],
-  ".dly":  ["-LD",  "(.d)(.ly)",  ["INV"], "-ly suffix fold"],
-  ".mar":  ["-RPL", "(.m)(.ar)",  ["INV"], "-ar suffix fold"],
-  ".mer":  ["-RPL", "(.m)(.er)",  ["INV"], "-er suffix fold"],
-  ".ner":  ["-RPB", "(.n)(.er)",  ["INV"], "-er suffix fold"],
-  ".ber":  ["-RB",  "(.b)(.er)",  ["INV"], "-er suffix fold"],
-  ".ker":  ["-RBG", "(.k)(.er)",  ["INV"], "-er suffix fold"],
-  ".ler":  ["-RL",  "(.l)(.er)",  ["INV"], "-er suffix fold"],
-  ".ter":  ["-RT",  "(.t)(.er)",  ["INV"], "-er suffix fold"],
-  ".ser":  ["-RS",  "(.s)(.er)",  ["INV"], "-er suffix fold"],
-  ".cer":  ["-RS",  "(!c)(.er)",  ["INV"], "-er suffix fold"],
-  ".der":  ["-RD",  "(.d)(.er)",  ["INV"], "-er suffix fold"],
-  ".cher": ["-FRP", "(.ch)(.er)", ["INV"], "-er suffix fold"],
-  ".ting": ["-GT",  "(.t)(.ing)", ["INV"], "-ing suffix fold"],
-  ".sing": ["-GS",  "(.s)(.ing)", ["INV"], "-ing suffix fold"],
-  ".ding": ["-GD",  "(.d)(.ing)", ["INV"], "-ing suffix fold"],
+  "dis.":  ["STK",  "(d.)i(s.)",   ["INV"], "s/d inversion"],
+  "des.":  ["STK",  "(d.)e(s.)",   ["INV"], "s/d inversion"],
+  "dec.":  ["STK",  "(d.)e(c!)",   ["INV"], "c/d inversion"],
+  "ins.":  ["STPH", "(in.)(s.)",   ["INV"], "s/n inversion (STPHERT → insert)"],
+  "inc.":  ["STPH", "(in.)(c!)",   ["INV"], "c/n inversion"],
+  "bes.":  ["SPW",  "(b.)e(s.)",   ["INV"], "s/b inversion"],
+  "mis.":  ["SPH",  "(m.)i(s.)",   ["INV"], "s/m inversion"],
+  "io":    ["OEU",  "(i)(o)",      ["INV"], "i/o inversion"],
+  ".rf":   ["-FR",  "(.r)(.f)",    ["INV"], "f/r inversion"],
+  ".rph":  ["-FR",  "(.r)(.ph)",   ["INV"], "f/r inversion"],
+  ".nf":   ["-FPB", "(.n)(.f)",    ["INV"], "f/n inversion"],
+  ".nv":   ["-FPB", "(.n)(.v)",    ["INV"], "f/n inversion"],
+  ".mph":  ["-FPL", "(.m)(.ph)",   ["INV"], "f/m inversion"],
+  ".lf":   ["-FL",  "(.l)(.f)",    ["INV"], "f/l inversion"],
+  ".lph":  ["-FL",  "(.l)(.ph)",   ["INV"], "f/l inversion"],
+  ".lv":   ["-FL",  "(.l)(.v)",    ["INV"], "f/l inversion"],
+  ".tl":   ["-LT",  "(.t)(.l)",    ["INV"], "l/t inversion"],
+  ".tal":  ["-LT",  "(.t)a(.l)",   ["INV"], "l/t inversion"],
+  ".tel":  ["-LT",  "(.t)e(.l)",   ["INV"], "l/t inversion"],
+  ".pr":   ["-RP",  "(.p)(.r)",    ["INV"], "r/p inversion"],
+  ".br":   ["-RB",  "(.b)(.r)",    ["INV"], "r/b inversion"],
+  ".cr":   ["-RBG", "(.c)(.r)",    ["INV"], "r/c inversion"],
+  ".kr":   ["-RBG", "(.k)(.r)",    ["INV"], "r/k inversion"],
+  ".xtr":  ["-RBGS","(.x)t(.r)",   ["INV"], "r/x inversion"],
+  ".gr":   ["-RG",  "(.g)(.r)",    ["INV"], "r/g inversion"],
+  ".tr":   ["-RT",  "(.t)(.r)",    ["INV"], "r/t inversion"],
+  ".dr":   ["-RD",  "(.d)(.r)",    ["INV"], "r/d inversion"],
+  ".gly":  ["-LG",  "(.g)(.ly)",   ["INV"], "-ly suffix fold"],
+  ".tly":  ["-LT",  "(.t)(.ly)",   ["INV"], "-ly suffix fold"],
+  ".tely": ["-LT",  "(.t)e(.ly)",  ["INV"], "-ly suffix fold"],
+  ".sly":  ["-LS",  "(.s)(.ly)",   ["INV"], "-ly suffix fold"],
+  ".sely": ["-LS",  "(.s)e(.ly)",  ["INV"], "-ly suffix fold"],
+  ".cely": ["-LS",  "(!c)e(.ly)",  ["INV"], "-ly suffix fold"],
+  ".dly":  ["-LD",  "(.d)(.ly)",   ["INV"], "-ly suffix fold"],
+  ".mar":  ["-RPL", "(.m)(.ar)",   ["INV"], "-ar suffix fold"],
+  ".mer":  ["-RPL", "(.m)(.er)",   ["INV"], "-er suffix fold"],
+  ".ner":  ["-RPB", "(.n)(.er)",   ["INV"], "-er suffix fold"],
+  ".ber":  ["-RB",  "(.b)(.er)",   ["INV"], "-er suffix fold"],
+  ".ker":  ["-RBG", "(.k)(.er)",   ["INV"], "-er suffix fold"],
+  ".ler":  ["-RL",  "(.l)(.er)",   ["INV"], "-er suffix fold"],
+  ".ter":  ["-RT",  "(.t)(.er)",   ["INV"], "-er suffix fold"],
+  ".ser":  ["-RS",  "(.s)(.er)",   ["INV"], "-er suffix fold"],
+  ".cer":  ["-RS",  "(!c)(.er)",   ["INV"], "-er suffix fold"],
+  ".der":  ["-RD",  "(.d)(.er)",   ["INV"], "-er suffix fold"],
+  ".cher": ["-FRP", "(.ch)(.er)",  ["INV"], "-er suffix fold"],
+  ".ting": ["-GT",  "(.t)(.ing)",  ["INV"], "-ing suffix fold"],
+  ".sing": ["-GS",  "(.s)(.ing)",  ["INV"], "-ing suffix fold"],
+  ".ding": ["-GD",  "(.d)(.ing)",  ["INV"], "-ing suffix fold"],
 
-  "~y":    ["E",    "y",         ["SPEC"], "E can be -y in suffix folds"],
-  ".dy":   ["ED",   "(.d)(~y)",   ["INV"], "-y suffix fold using E"],
-  ".ddy":  ["ED",   "(.dd)(~y)",  ["INV"], "-y suffix fold using E"],
-  ".lly":  ["EL",   "(.ll)(~y)",  ["INV"], "-y suffix fold using E"],
-  ".cy":   ["ES",   "(!c)(~y)",   ["INV"], "-y suffix fold using E"],
-  ".ry":   ["ER",   "(.r)(~y)",   ["INV"], "-y suffix fold using E"],
-  ".rry":  ["ER",   "(.rr)(~y)",  ["INV"], "-y suffix fold using E"],
-  ".ry+":  ["EUR",  "(.r)(y)",    ["INV"], "-y suffix fold"],
+  "~y":    ["E",    "y",          ["SPEC"], "E can be -y in suffix folds"],
+  ".dy":   ["ED",   "(.d)(~y)",    ["INV"], "-y suffix fold using E"],
+  ".ddy":  ["ED",   "(.dd)(~y)",   ["INV"], "-y suffix fold using E"],
+  ".lly":  ["EL",   "(.ll)(~y)",   ["INV"], "-y suffix fold using E"],
+  ".cy":   ["ES",   "(!c)(~y)",    ["INV"], "-y suffix fold using E"],
+  ".ry":   ["ER",   "(.r)(~y)",    ["INV"], "-y suffix fold using E"],
+  ".rry":  ["ER",   "(.rr)(~y)",   ["INV"], "-y suffix fold using E"],
+  ".ry+":  ["EUR",  "(.r)(y)",     ["INV"], "-y suffix fold"],
 
   # Rules for letters that are split or slurred between multiple strokes
   "b/b":    ["-B/PW",      "(.b)(~/~)(|b.)", ["LINK"], "consonant `b` split between strokes"],
@@ -417,8 +415,6 @@
   # Miscellaneous special cases.
   "uY~":    ["KWR",    "u|Y",        ["SPEC"], "phonetic Y"],
   "ua.":    ["KWRA",   "(uY~)(a)",         [], "`u` has phonetic Y onset"],
-  "sH~":    ["SH",     "s",          ["SPEC"], "unique SH sound as in `sure` and `sugar`"],
-  "su.":    ["SHU",    "(sH~)(u)",         [], "unique SH sound as in `sure` and `sugar`"],
   "on.":    ["WUPB",   "(|w.)(o++)(.n)",   [], "unique WUN sound as in `one` and `once`"],
   "~gJ":    ["-G",     "g|J",        ["SPEC"], "may have J sound in certain combinations"],
   ".logy":  ["-LG",    "(.l)o(~gJ)y",      [], "suffix where `g` has J sound"],
@@ -433,11 +429,12 @@
 
   # Compound rules - these are optional, but help accuracy
   "sc.":    ["SK",     "(s.)(c.)",         [], "also applies to soft `sc` words such as `science`"],
-  "qu.":    ["KW",     "(q.)(u.)",         [], "phonetic KW"],
+  "sch.":   ["SH",     "(s.)c(h.)",        [], "merged consonant sounds"],
   "enter.": ["SPWR",   "(ent.)e(r.)",      [], "ONLY works as prefix"],
   "inter.": ["SPWR",   "(int.)e(r.)",      [], "ONLY works as prefix"],
   "exp.":   ["SP",     "(ex+)(p.)",        [], "slurred short form of `exp`"],
   "comp.":  ["KP",     "(com.)(p.)",       [], "usually overrides `ex` in conflicts (KPABGT → compact)"],
+  "qu.":    ["KW",     "(q.)(u.)",         [], "phonetic KW"],
   ".ous":   ["OUS",    "(o)(u)(.s)",       [], "suffix with separate vowels"],
   ".av":    ["AF",     "(a)(.v)",          [], "use short vowel sound for v ending"],
   ".eav":   ["EF",     "(ea+)(.v)",        [], "use short vowel sound for v ending"],
